--- a/src/app/feature/product/screens/register/register.component.html
+++ b/src/app/feature/product/screens/register/register.component.html
@@ -1,4 +1,4 @@
 <product-form 
-    [formControl]="productFC"
+    [formGroup]="productFG"
     [displaySubmit]="true"
     (submit)="saveProduct()"/>
