--- a/src/app/feature/customer/components/dialogs/add-dependent/add-dependent.component.html
+++ b/src/app/feature/customer/components/dialogs/add-dependent/add-dependent.component.html
@@ -1,8 +1,8 @@
 <h2 mat-dialog-title>Adicionar um dependente</h2>
 <div mat-dialog-content>
-    <form-customer [formControl]="customerFC" />
+    <form-customer [formGroup]="customerFG" />
 </div>
 <mat-dialog-actions align="end">
     <button color="warn" mat-button (click)="dialogRef.close()">Cancelar</button>
-    <button color="primary" mat-button [mat-dialog-close]="customerFC.value" cdkFocusInitial>Salvar</button>
+    <button color="primary" mat-button cdkFocusInitial (click)="save()">Salvar</button>
 </mat-dialog-actions>
