--- a/src/app/feature/product/components/forms/product-form/product-form.component.html
+++ b/src/app/feature/product/components/forms/product-form/product-form.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="form" #formDir="ngForm">
+<form [formGroup]="formGroup" #formDir="ngForm">
 
     <div class="chip-list">
       <mat-chip-listbox formControlName="productType">
