--- a/src/app/feature/customer/components/orders/orders.component.html
+++ b/src/app/feature/customer/components/orders/orders.component.html
@@ -27,5 +27,5 @@
 
 <!-- Display when data is 'EMPTY' -->
 <ng-template #displayEmpty>
-    <h1>Está vaziaa</h1>
+    <h1>Nenhum pedidos encontrado...</h1>
 </ng-template>
