--- a/src/app/feature/customer/components/payments/payments.component.html
+++ b/src/app/feature/customer/components/payments/payments.component.html
@@ -24,7 +24,7 @@
 
     <!-- Display when data is 'EMPTY' -->
     <ng-template #displayEmpty>
-        <h1>Está vaziaa</h1>
+        <h1>Nenhum pagamentos encontrado...</h1>
     </ng-template>
     
     
