--- a/src/app/feature/customer/screens/register/register.component.html
+++ b/src/app/feature/customer/screens/register/register.component.html
@@ -54,5 +54,5 @@
         
     </mat-stepper>
 
-    <div class="block" [class.unlock]="isCustomerPersisted()"></div>
+    <!--<div class="block" [class.unlock]="isCustomerPersisted()"></div>-->
 </div>
