--- a/src/app/feature/customer/components/forms/form-address/form-address.component.html
+++ b/src/app/feature/customer/components/forms/form-address/form-address.component.html
@@ -10,9 +10,8 @@
         (click)="findByCEP()">
         <mat-icon>search</mat-icon>
       </button>
-      <mat-hint>nome do cep</mat-hint>
       <mat-error *ngIf="cep?.errors?.['required']">
-        O cep é obrigatório.
+        Obrigatório.
       </mat-error>
     </mat-form-field>
 
@@ -21,9 +20,8 @@
         <mat-label>Rua</mat-label>
         <input type="text" matInput formControlName="street"
                placeholder="Nome da rua">
-        <mat-hint>nome da rua</mat-hint>
         <mat-error *ngIf="street?.errors?.['required']">
-          O nome da rua é obrigatório.
+          Obrigatório.
         </mat-error>
       </mat-form-field>
     
@@ -31,9 +29,8 @@
       <mat-form-field class="input-number">
         <mat-label>Número</mat-label>
         <input type="text" matInput formControlName="number">
-        <mat-hint>número</mat-hint>
         <mat-error *ngIf="number?.errors?.['required']">
-          O número é obrigatório.
+          Obrigatório.
         </mat-error>
       </mat-form-field>
   
@@ -42,9 +39,8 @@
         <mat-label>Bairro</mat-label>
         <input type="text" matInput formControlName="neighborhood"
                placeholder="nome do bairro">
-        <mat-hint>nome do bairro</mat-hint>
         <mat-error *ngIf="neighborhood?.errors?.['required']">
-          O nome do bairro é obrigatório.
+          Obrigatório.
         </mat-error>
       </mat-form-field>
 
@@ -53,9 +49,8 @@
         <mat-label>Cidade</mat-label>
         <input type="text" matInput formControlName="city"
                placeholder="nome da cidade">
-        <mat-hint>nome da cidade</mat-hint>
         <mat-error *ngIf="city?.errors?.['required']">
-          O nome de uma cidade é obrigatório.
+          Obrigatório.
         </mat-error>
       </mat-form-field>
 
@@ -64,9 +59,8 @@
         <mat-label>Estado</mat-label>
         <input type="text" matInput formControlName="uf"
                placeholder="nome do estado">
-        <mat-hint>UF</mat-hint>
         <mat-error *ngIf="uf?.errors?.['required']">
-          O nome de um estado é obrigatório.
+          Obrigatório.
         </mat-error>
       </mat-form-field>
       
@@ -85,7 +79,9 @@
             {{delivery.name}}
           </mat-option>
         </mat-select>
-        <mat-hint>tipo de entrega</mat-hint>
+        <mat-error *ngIf="deliveryType?.errors?.['required']">
+          Obrigatório.
+        </mat-error>
       </mat-form-field>
 
 
@@ -95,7 +91,7 @@
           prefix="+55 "  mask="(00) 00000-0000" [dropSpecialCharacters]="false">
         <mat-hint>número de celular 1</mat-hint>
         <mat-error *ngIf="cellphone1?.errors?.['mask']">
-          celular 1 inválido.
+          Inválido.
         </mat-error>
       </mat-form-field>
 
@@ -106,7 +102,7 @@
           prefix="+55 "  mask="(00) 00000-0000" [dropSpecialCharacters]="false">
         <mat-hint>número de celular 2</mat-hint>
         <mat-error *ngIf="cellphone2?.errors?.['mask']">
-          celular 2 inválido.
+          Inválido.
         </mat-error>
       </mat-form-field>
 
@@ -117,7 +113,7 @@
           prefix="+55 "  mask="(00) 0000-0000" [dropSpecialCharacters]="false">
         <mat-hint>número de telefone 1</mat-hint>
         <mat-error *ngIf="telephone1?.errors?.['mask']">
-          telefone 1 inválido.
+          Inválido.
         </mat-error>
       </mat-form-field>
 
@@ -128,7 +124,7 @@
           prefix="+55 "  mask="(00) 0000-0000" [dropSpecialCharacters]="false">
         <mat-hint>número de telefone 2</mat-hint>
         <mat-error *ngIf="telephone2?.errors?.['mask']">
-          telefone 2 inválido.
+          Inválido.
         </mat-error>
       </mat-form-field>
           
