--- a/src/app/feature/customer/components/forms/form-customer/form-customer.component.html
+++ b/src/app/feature/customer/components/forms/form-customer/form-customer.component.html
@@ -7,9 +7,8 @@
       [disabled]="formGroup.status === 'DISABLED'">
           <mat-icon>close</mat-icon>
       </button>
-      <mat-hint>Digite o nome do cliente</mat-hint>
       <mat-error *ngIf="name?.errors?.['required']">
-        O nome é obrigatório.
+        Obrigatório.
       </mat-error>
     </mat-form-field>
   
@@ -18,12 +17,11 @@
       <mat-label>CPF</mat-label>
       <input type="text" matInput formControlName="cpf" placeholder="xxx.xxx.xxx-xx"
         maxlength="14" mask="000.000.000-00" [dropSpecialCharacters]="false">
-      <mat-hint>Digite o cpf do cliente</mat-hint>
       <mat-error *ngIf="cpf?.errors?.['required']">
-        O cpf é obrigatório.
+        Obrigatório.
       </mat-error>
       <mat-error *ngIf="cpf?.errors?.['pattern']">
-        cpf inválido.
+        Inválido.
       </mat-error>
       <mat-error *ngIf="cpf?.errors?.['appExistCPF']">
         {{ cpf?.errors?.['appExistCPF'] }}
