--- a/src/app/feature/product/components/forms/product-form/product-form.component.html
+++ b/src/app/feature/product/components/forms/product-form/product-form.component.html
@@ -26,9 +26,8 @@
     <mat-form-field appearance="fill" class="input-name">
         <mat-label>Nome</mat-label>
         <input type="text" matInput placeholder="Digite o nome do produto..." formControlName="name">
-        <mat-hint>nome do produto</mat-hint>
         <mat-error *ngIf="name.errors?.['required']">
-          O nome é obrigatório.
+          Obrigatório.
         </mat-error>
       </mat-form-field>
       
@@ -36,23 +35,20 @@
           <mat-label>Descrição</mat-label>
           <input type="text" matInput formControlName="description"
                  placeholder="Descrição...">
-          <mat-hint>descrição do produto</mat-hint>
           <mat-error *ngIf="name.errors?.['required']">
-            A descrição é obrigatória.
+            Obrigatória.
           </mat-error>
         </mat-form-field>
       
         <mat-form-field class="input-reference">
           <mat-label>Referência</mat-label>
           <input type="text" matInput formControlName="reference">
-          <mat-hint>referência</mat-hint>
         </mat-form-field>
     
         <mat-form-field class="input-barcode">
           <mat-label>Código de barras</mat-label>
           <input type="text" matInput formControlName="barcode"
                  placeholder="ler o código do produto...">
-          <mat-hint>código de barras</mat-hint>
         </mat-form-field>      
     
         <mat-form-field appearance="fill" class="input-brand">
@@ -67,43 +63,38 @@
               {{brand.name}}
             </mat-option>
           </mat-select>
-          <mat-hint>selecione marca</mat-hint>
         </mat-form-field>
     
         <mat-form-field class="input-price">
           <mat-label>Preço</mat-label>
           <input type="number" matInput formControlName="price"
               prefix="R$ " placeholder="digite o preço...">
-          <mat-hint>preço</mat-hint>
           <mat-error *ngIf="price.errors?.['required']">
-              O preço é obrigatório.
+              Obrigatório.
             </mat-error>
         </mat-form-field>   
 
         <mat-form-field class="input-quantity">
           <mat-label>Quantidade</mat-label>
           <input type="number" matInput formControlName="quantity" placeholder="digite quantitade">
-          <mat-hint>Quantidade</mat-hint>
           <mat-error *ngIf="price.errors?.['required']">
-              A quantidade é obrigatória.
+              Obrigatório.
             </mat-error>
         </mat-form-field>  
 
         <mat-form-field class="input-min-quantity">
           <mat-label>Quantidade mín</mat-label>
           <input type="number" matInput formControlName="min_quantity" placeholder="digite quantidade mínima">
-          <mat-hint>Quantidade mín</mat-hint>
           <mat-error *ngIf="price.errors?.['required']">
-              A quantidade mínima é obrigatória.
+              Obrigatório.
             </mat-error>
         </mat-form-field>  
 
         <mat-form-field class="input-max-quantity">
           <mat-label>Quantidade máx</mat-label>
           <input type="number" matInput formControlName="max_quantity" placeholder="digite quantidade máxima">
-          <mat-hint>Quanitdade máx</mat-hint>
           <mat-error *ngIf="price.errors?.['required']">
-              A quantidade máxima é obrigatória.
+              Obrigatório.
             </mat-error>
         </mat-form-field>  
 
