--- a/src/app/feature/product/components/forms/product-form/product-form.component.html
+++ b/src/app/feature/product/components/forms/product-form/product-form.component.html
@@ -63,6 +63,9 @@
               {{brand.name}}
             </mat-option>
           </mat-select>
+          <mat-error *ngIf="brand.errors?.['required']">
+            Obrigatório.
+          </mat-error>
         </mat-form-field>
     
         <mat-form-field class="input-price">
