--- a/src/app/feature/customer/screens/register/register.component.html
+++ b/src/app/feature/customer/screens/register/register.component.html
@@ -1,6 +1,6 @@
 <div class="container-customer">
     <button mat-flat-button color="primary"
-        [disabled]="isCustomerPersisted()"
+        [disabled]="!isCustomerEmpty()"
         (click)="reset()"
         class="btt-new">
         Novo
@@ -54,5 +54,5 @@
         
     </mat-stepper>
 
-    <!--<div class="block" [class.unlock]="isCustomerPersisted()"></div>-->
+    <div class="block" [class.unlock]="isCustomerEmpty()"></div>
 </div>
