--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
 <mat-toolbar color="primary">
   <mat-toolbar-row>
     <button class="box-button-menu" (click)="changeOpened(!opened)">
-      <mat-icon>menu</mat-icon>
-      <h1>Amélia Revendedora</h1>
+      <mat-icon class="title">menu</mat-icon>
+      <h1 class="title">Amélia Revendedora</h1>
     </button>
   </mat-toolbar-row>
 </mat-toolbar>
