--- a/src/app/shared/components/dialogs/payment-detail/payment-detail.component.html
+++ b/src/app/shared/components/dialogs/payment-detail/payment-detail.component.html
@@ -20,7 +20,7 @@
                 </mat-error>
             </mat-form-field>
             <input-customizable type="number"  />
-            <advance-chip-listbox [data]="paymentTypes" formControlName="inputPaymentType" />
+            <advance-chip-listbox [bttns]="false" [data]="paymentTypes" formControlName="inputPaymentType" />
         </form>
     </ng-container>
 </div>
