--- a/src/app/feature/inventory-control/inventory-control.component.html
+++ b/src/app/feature/inventory-control/inventory-control.component.html
@@ -14,7 +14,7 @@ class="mat-tabGroup" mat-stretch-tabs="false" mat-align-tabs="center">
 
     <mat-tab>
       <ng-template mat-tab-label>
-        <mat-icon class="example-tab-icon">list</mat-icon>
+        <mat-icon class="example-tab-icon">add_box</mat-icon>
         Atualizar
       </ng-template>
 
