--- a/src/app/feature/product/screens/list/list.component.css
+++ b/src/app/feature/product/screens/list/list.component.css
@@ -7,6 +7,11 @@
     align-items: center;
 }
 
+mat-form-field {
+    width: 50%;
+    max-width: 400px;
+}
+
 table-entities{
     width: 50%;
     height: 90%;
